[package]
name = "jd-decrypter"
version = "0.1.1"
authors = ["Robert Schütte <schuetterobert@gmail.com>"]
license = "MIT"
repository = "https://github.com/Roba1993/jd-decryptor"
description = "A decryption library for JDownloader files"

[dependencies]
error-chain = "0.11.0"
rust-crypto = "0.2.36"
serde = "1.0.76"
serde_derive = "1.0.76"
serde_json = "1.0.26"

[lib]
name = "jd_decrypter"